kubernetes/jenkins/ca.yml
apiVersion: v1
kind: Service
metadata:
  name: certificate-authority
  namespace: jenkins
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 8443
      name: https
  selector:
    app: certificate-authority

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-authority
  namespace: jenkins
  labels:
    app: certificate-authority
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: certificate-authority
  template:
    metadata:
      labels:
        app: certificate-authority
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: step-ca
          persistentVolumeClaim:
            claimName: ca
#          glusterfs:
#            endpoints: glusterfs-cluster
#            path: jenkins-ca
#            readOnly: false
        - name: certificate-authority-password
          secret:
            secretName: certificate-authority-password
            defaultMode: 0400
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 8.8.8.8
      containers:
        - name: certificate-authority
          image: containers.zevrant-services.com/zevrant/step-ca:latest
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: step-ca
              mountPath: /opt/step-ca
            - mountPath: /var/zevrant-services/ca-password
              name: certificate-authority-password
