kubernetes/jenkins/gradle-build-cache-node.yml
apiVersion: v1
kind: Service
metadata:
  name: build-cache-node
  namespace: jenkins
spec:
  selector:
    app: build-cache-node
  ports:
    - name: build-cache-node
      port: 5071
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: build-cache-node
  namespace: jenkins
  labels:
    app: build-cache-node
spec:
  selector:
    matchLabels:
      app: build-cache-node
  serviceName: build-cache-node
  template:
    metadata:
      labels:
        app: build-cache-node
    spec:
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: Always
      imagePullSecrets:
        - name: harbor-ro
      volumes:
        - name: user-config
          configMap:
            name: gradle-cache-config
        - name: config-dir
          emptyDir:
            sizeLimit: 1Gi
      containers:
        - name: build-cache-node
          image: harbor.zevrant-services.internal/dockerhub/gradle/build-cache-node:18.0
          args: [ "start", "--generate-self-signed-cert" ]
          ports:
            - containerPort: 5071
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          resources:
            requests:
              memory: 1Gi
              cpu: "0.5"
            limits:
              memory: 2Gi
              cpu: "1.5"
          volumeMounts:
            - mountPath: /data
              name: build-cache-node-data-volume
            - mountPath: /data/conf/
              name: config-dir
  volumeClaimTemplates:
    - metadata:
        name: build-cache-node-data-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: '10Gi'
