kubernetes/jenkins/keydb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: jenkins-keydb.zevrant-services.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-versions-database-keydb
                port:
                  name: server
  ingressClassName: nginx
